Create fonts and routes for images

--- a/YoTeArriendo/app/templates/application.hbs
+++ b/YoTeArriendo/app/templates/application.hbs
@@ -1,20 +1,22 @@
 <center>
 	<br><br><br><br>
 	<nav>
-		<img  src = "logo-4.png">
-		<font FACE="symbah regular">yoTeArriendo</font>
-		<font FACE="gotham thin">.com</font>
-  		{{#link-to "route-inicio"}}Inicio{{/link-to}}
-  		{{#link-to "route-tours"}}Tours{{/link-to}}
-  		{{#link-to "route-hotel"}}Hoteles{{/link-to}}
-  		{{#link-to "route-cities"}}Ciudades{{/link-to}}
-  		{{#link-to "route-countries"}}Paises{{/link-to}}
-  		{{#link-to "route-profile"}}Perfil{{/link-to}}
+		<img  src = "/assets/Image/logo4.png" height="30" width="30">
+		<font FACE="symbah">yoTeArriendo</font>
+		<font FACE="gotham">.com</font> &emsp;
+		<font FACE="gotham" color="white">
+	  		{{#link-to "route-inicio" class="button"}}Inicio{{/link-to}} &emsp;
+	  		{{#link-to "route-tours" class="button"}}Tours{{/link-to}} &emsp;
+	  		{{#link-to "route-hotel" class="button"}}Hoteles{{/link-to}} &emsp;
+	  		{{#link-to "route-cities" class="button"}}Ciudades{{/link-to}} &emsp;
+	  		{{#link-to "route-countries" class="button"}}Paises{{/link-to}} &emsp;
+	  		{{#link-to "route-profile" class="button"}}Perfil{{/link-to}} &emsp;
+  		</font>
 	</nav>
 </center>
 
 {{outlet}}
 
 <center>
-	<h4>YoTeArriendo.com Todos los derechos reservados 2018 Medellin, Antioquia<img  src = "logo-4.png"></h4>
+	<<font FACE="helveticaNeue">YoTeArriendo.com Todos los derechos reservados 2018 Medellin, Antioquia</font><img  src = "/assets/Image/logo3.png" height="30" width="30">
 </center>
