--- a/YoTeArriendo/app/styles/app.css
+++ b/YoTeArriendo/app/styles/app.css
@@ -1,3 +1,9 @@
+.body{
+  background-color: steelblue;
+  width: 100%;
+
+}
+
 @font-face {
   font-family: 'gotham';
   src: url('/assets/fonts/Gotham-Thin.otf') format('truetype');
@@ -12,7 +18,48 @@
 }
 @font-face {
   font-family: 'symbah';
+  color: #fff;
   src: url('/assets/fonts/Symbah-Regular.otf') format('truetype');
   font-weight: bold;
   font-style: bold;
 }
+
+button{
+  font-family: 'helveticaNeue';
+  font-weight: bold;
+  font-size: 12pt;
+  font-style: normal;
+  text-decoration: none;
+  text-align: center;
+  background-color: transparent;
+  border-color: white;
+  color:white;
+  border-style: solid;
+  border-width: 1.5pt;
+  padding: 3pt;
+  width: 60pt;
+  box-shadow: inset 0 0 0 .2px  #fff;
+}
+
+.button:hover{
+  color: black;
+  background-color: #fff;
+  text-decoration: none;
+  box-shadow: inset 0 0 0 3px #3a7999;
+  width: 60pt;
+}
+ 
+ footer {
+  background-color: white;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  color: black;
+  position:fixed;
+  left:0px;
+}
+
+
+
+.link { color: #fff; } 
+.link:hover { color: #fff; }
