--- a/YoTeArriendo/app/templates/route-inicio.hbs
+++ b/YoTeArriendo/app/templates/route-inicio.hbs
@@ -1,4 +1,40 @@
 <center>
-	<h1>ESTOY EN EL MENU DE INICIO</h1>
+	<br><br>
+	<nav>
+		<img  src = "/assets/Image/logo4.png" height="100" width="100">
+		<font color="white" size= "30" FACE="symbah">yoTeArriendo</font>
+		<font color="white" size= "30" FACE="gotham">.com</font> &emsp;
+	</nav>
+	<nav>
+		<font FACE="gotham">
+			<div class="itool">
+				<input type=image src="/assets/Image/tours.jpeg" width="125" height="125" onclick="location.href='/tours';">
+				<div class="tool">Tours</div>
+			</div>
+			<div class="itool">
+				<input  type=image src="/assets/Image/hotels.jpg" width="125" height="125" onclick="location.href='/hotels';">
+				<div class="tool">Hoteles</div>
+			</div>
+			<div class="itool">
+				<input type=image src="/assets/Image/cities.jpg" width="125" height="125" onclick="location.href='/cities';">
+				<div class="tool">Ciudades</div>
+			</div>
+  		</font>
+  						
+
+	</nav>
+	<br><br>
+	<nav>
+		<font face="gotham">
+			<div class="itool">
+				<input type=image src="/assets/Image/countries.jpg" width="125" height="125" onclick="location.href='/countries';">
+				<div class="tool">Paises</div>
+			</div>
+			<div class="itool">
+				<input type=image src="/assets/Image/profile.jpeg" width="125" height="125" onclick="location.href='/profile';">
+				<div class="tool">Mi Perfil</div>
+			</div>
+		</font>
+	</nav>
 </center>
 {{outlet}}
