--- a/YoTeArriendo/app/styles/app.css
+++ b/YoTeArriendo/app/styles/app.css
@@ -24,6 +24,38 @@
   font-style: bold;
 }
 
+label {
+  width: 15%;
+  padding: 0.5em 0.5em 0.5em 0.5em;
+  font-size:1.3em;
+  font-family:Impact;
+  vertical-align: middle;
+  text-align: left;
+  box-sizing: border-box;
+  display:inline-block;
+  color:white;
+}
+input[type=date] {
+  width: 20%;
+  padding: 0.3em 0.3em;
+  font-size:1.3em;
+  font-family:Impact;
+  vertical-align: middle;
+  text-align: right;
+  box-sizing: border-box;
+}
+select {
+  width: 20%;
+  padding: 0.5em 0.5em;
+  font-size:1.3em;
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
+}
+option{
+  direction:rtl;
+}
+
 button{
   font-family: 'helveticaNeue';
   font-weight: bold;
