--- a/YoTeArriendo/app/templates/route-hotel.hbs
+++ b/YoTeArriendo/app/templates/route-hotel.hbs
@@ -1,3 +1,28 @@
 <center>
 	<h1>AQUI VAMOS A VER LOS HOTELES</h1>
+  <form>
+    <label for="fechaLlgeada">Fecha de Llegada:</label>
+    {{input type="date" value=fechaEntrada min=hoy max="2018-12-31"}}
+    <label for="fechaSalida">Fecha de Salida:</label>
+	  {{input type="date" value=fechaSalida min=entrada max="2018-12-31"}}
+  </form>
+  <br><br>
+  <form>
+    <label>Ciudades: </label>
+    <select name="ciudades" dir="rtl">
+      <option>Medellín</option>
+      <option>Cali</option>
+      <option>Bogotá</option>
+      <option>Cartagen</option>
+      <option>Santa Marta</option>
+    </select>
+    <label>Tipo: </label>
+    <select name="tipo" dir="rtl">
+      <option>Apartamento</option>
+      <option>Casa</option>
+      <option>Luxury</option>
+    </select>
+  </form>
+  <br><br>
+  <button {{action "buscar"}}>Buscar</button>
 </center>
